# freetype-demos

./: .gitignore  .gitlab-ci.yml  .mailmap  ChangeLog  ChangeLog.old  Makefile  README  README.meson  meson.build  meson_options.txt  vms_make.com
builds/windows/msvc/: freetype.props  ft2demos.sln  ftbench.vcxproj  ftdump.vcxproj  ftgamma.vcxproj  ftgrid.vcxproj  ftlint.vcxproj  ftmulti.vcxproj  ftstring.vcxproj  ftview.vcxproj  migs.vcxproj
graph/: gblany.h  gblbgra.h  gblblit.c  gblblit.h  gblcolor.h  gblender.c  gblender.h  gblhbgr.h  gblhrgb.h  gblspans.h  gblvbgr.h  gblvrgb.h  graph.h  grblit.c  grblit.h  grconfig.h  grdevice.c  grdevice.h  grevents.h  grfill.c  grfont.c  grfont.h  grinit.c  grobjs.c  grobjs.h  grswizzle.h  grtypes.h  meson.build  rules.mk
graph/batch/: grbatch.c  rules.mk
graph/beos/: grbeos.cpp
graph/mac/: grmac.c
graph/win32/: grwin32.c  grwin32.h
graph/x11/: grx11.c  grx11.h  rules.mk
mac/: Makefile  ftoldmac.c  getargv.c
man/: ftbench.1  ftdiff.1  ftdump.1  ftgamma.1  ftgrid.1  ftlint.1  ftmulti.1  ftsdf.1  ftstring.1  ftvalid.1  ftview.1  ttdebug.1
src/: Jamfile  aux.c  aux.h  common.c  common.h  compos.c  ftbench.1  ftbench.c  ftchkwd.c  ftcommon.c  ftcommon.h  ftdiff.1  ftdiff.c  ftdump.1  ftdump.c  ftgamma.1  ftgamma.c  ftgrid.1  ftgrid.c  ftinspect.cpp  ftinspect.h  ftinspect.pro  ftlint.1  ftlint.c  ftmemchk.c  ftmulti.1  ftmulti.c  ftpatchk.c  ftpngout.c  ftsbit.c  ftsdf.c  ftstring.1  ftstring.c  fttimer.c  fttry.c  ftvalid.1  ftvalid.c  ftview.1  ftview.c  gbench.c  (+14 more)
src/ftinspect/: .gitignore  CMakeLists.txt  ftinspect-build.sh  ftinspect-qt4.pro  ftinspect-qt5.pro  ftinspect.cpp  ftinspect.pro  maingui.cpp  maingui.hpp  meson.build  uihelper.cpp  uihelper.hpp
src/ftinspect/engine/: charmap.cpp  charmap.hpp  engine.cpp  engine.hpp  fontfilemanager.cpp  fontfilemanager.hpp  fontinfo.cpp  fontinfo.hpp  fontinfonamesmapping.cpp  mmgx.cpp  mmgx.hpp  paletteinfo.cpp  paletteinfo.hpp  rendering.cpp  rendering.hpp  renderutils.hpp  stringrenderer.cpp  stringrenderer.hpp
src/ftinspect/glyphcomponents/: glyphbitmap.cpp  glyphbitmap.hpp  glyphcontinuous.cpp  glyphcontinuous.hpp  glyphoutline.cpp  glyphoutline.hpp  glyphpointnumbers.cpp  glyphpointnumbers.hpp  glyphpoints.cpp  glyphpoints.hpp  graphicsdefault.cpp  graphicsdefault.hpp  grid.cpp  grid.hpp
src/ftinspect/models/: customcomboboxmodels.cpp  customcomboboxmodels.hpp  fontinfomodels.cpp  fontinfomodels.hpp  ttsettingscomboboxmodel.cpp  ttsettingscomboboxmodel.hpp
src/ftinspect/panels/: abstracttab.hpp  comparator.cpp  comparator.hpp  continuous.cpp  continuous.hpp  glyphdetails.cpp  glyphdetails.hpp  info.cpp  info.hpp  settingpanel.cpp  settingpanel.hpp  settingpanelmmgx.cpp  settingpanelmmgx.hpp  singular.cpp  singular.hpp
src/ftinspect/rendering/: comparator.cpp  comparator.hpp  glyphbitmap.cpp  glyphbitmap.hpp  glyphcontinuous.cpp  glyphcontinuous.hpp  glyphoutline.cpp  glyphoutline.hpp  glyphpointnumbers.cpp  glyphpointnumbers.hpp  glyphpoints.cpp  glyphpoints.hpp  glyphsegment.cpp  glyphsegment.hpp  graphicsdefault.cpp  graphicsdefault.hpp  grid.cpp  grid.hpp  renderutils.cpp  renderutils.hpp  view.cpp  view.hpp
src/ftinspect/widgets/: charmapcombobox.cpp  charmapcombobox.hpp  custom_widgets.cpp  custom_widgets.hpp  customwidgets.cpp  customwidgets.hpp  fontsizeselector.cpp  fontsizeselector.hpp  glyphindexselector.cpp  glyphindexselector.hpp  qcomboboxx.cpp  qcomboboxx.hpp  qgraphicsviewx.cpp  qgraphicsviewx.hpp  qpushbuttonx.cpp  qpushbuttonx.hpp  qspinboxx.cpp  qspinboxx.hpp  tripletselector.cpp  tripletselector.hpp
subprojects/: freetype2.wrap
